# swift_multiregion_replication_tempest_plugin

./: README.rst  setup.cfg  setup.py
swift_multiregion_replication_tempest_plugin/: plugin.py
swift_multiregion_replication_tempest_plugin/tests/: swift_nodes_credentials.json  test_multiregion_replication.py
