[metadata]
name = swift_multiregion_replication_tempest_plugin
summary = Tests swift multiregion replication
description-file = README.rst

[entry_points]
tempest.test_plugins =
    swift_multiregion_replication_tempest_plugin = swift_multiregion_replication_tempest_plugin.path:SwiftMultiregionReplication